--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 html {
-    background-color: #191c4a;
+    /*
+    background-color: #c6a771;
+    */
+    background-image: url(../Layouts/images/paille.png);
     height: 100%;
 }
 
@@ -32,8 +35,7 @@ a:hover {
 /* ========================================================================== */
 
 #banniere {
-    background-color: #cccccc;
-    background-image: url(banniere.png);
+    background-color: #b08e51;
     background-repeat: no-repeat;
     background-position: right;
     height: 120px;
@@ -58,7 +60,7 @@ a:hover {
 #menu {
     padding-top: 20px;
     float: left;
-    background-color: #444444;
+    background-color: #603e01;
     color: #aaaaaa;
     width: 200px;
     min-height: 700px;
