--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ html {
     /*
     background-color: #c6a771;
     */
-    background-image: url(../Layouts/images/paille.png);
+    background-image: url(../Layouts/images/papaille.png);
     height: 100%;
 }
 
