--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 
 /* ========================================================================== */
 /* Général */
-
+/*
 a {
     color: #444444;
     text-decoration: underline;
@@ -31,7 +31,7 @@ a:hover {
     color: #aaaaaa;
     text-decoration: underline;
 }
-
+*/
 /* ========================================================================== */
 /* Header */
 
