--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ h1 {
 }
 
 table {
-    width: 80%;
+    /* width: 80%; */
     border-collapse: collapse;
     margin-left: auto;
     margin-right: auto;
