--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,10 @@ form .input_quantite {
     width: 80px;
 }
 
+form .input_valider {
+    float: right;
+}
+
 /* Centre les nombres */
 .nombre {
     text-align: center;
