--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,8 @@ form .input_valider {
 }
 
 form .col_coloree {
-    background-color: red;
+    color: #444444;
+    background-color: #cccccc;
 }
 
 /* Centre */
