--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,14 @@ h1 {
     /* cursor: pointer; */
 }
 
+.tab_article {
+    font-size:10px;
+}
+
+.tab_tab_article {
+    font-size:9px;
+}
+
 /* Titre rayon dans commander article */
 .cat {
     font-size: 30px;
