--- a/echoppe/css/style.css
+++ b/echoppe/css/style.css
@@ -7,7 +7,7 @@ html {
 
 body {
     min-height: 100%;
-    color #444444;
+    color: #444444;
     background-color: #f0f0f0;
     margin: 10px auto;
     margin-top: 0px;
