--- a/echoppe/css/style.css
+++ b/echoppe/css/style.css
@@ -24,7 +24,7 @@ body {
 /* Header */
 
 #banniere {
-    background-color: #ffcc99;
+    background-color: yellowgreen;
     background-repeat: no-repeat;
     background-position: right;
     height: 120px;
