--- a/echoppe/css/style.css
+++ b/echoppe/css/style.css
@@ -281,8 +281,8 @@ form .input_valider {
   -moz-user-select: none;
   -khtml-user-select: none;
   -webkit-user-select: none;
-  user-select: none;
-   Required to make elements draggable in old WebKit 
+    -user-select: none;
+   /*Required to make elements draggable in old WebKit*/ 
   -khtml-user-drag: element;
   -webkit-user-drag: element;
 }
