--- a/echoppe/css/style.css
+++ b/echoppe/css/style.css
@@ -330,3 +330,41 @@ form .input_valider {
 .column.over {
   border: 2px dashed #000;
 }
+
+/*ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+li {
+	width: 440px;
+	height: 50px;
+	line-height: 50px;
+	border: 1px solid #ccc;
+	margin-bottom: 3px;
+	padding-left: 10px;
+}*/
+
+button {
+	color: #fff;
+	background: #1c1c1c;
+	background: -moz-linear-gradient(top,  #1c1c1c 0%, #000000 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1c1c1c), color-stop(100%,#000000));
+	background: -webkit-linear-gradient(top,  #1c1c1c 0%,#000000 100%);
+	background: -o-linear-gradient(top,  #1c1c1c 0%,#000000 100%);
+	background: -ms-linear-gradient(top,  #1c1c1c 0%,#000000 100%);
+	background: linear-gradient(to bottom,  #1c1c1c 0%,#000000 100%);
+	border: 0;
+	padding: 5px 10px;
+	cursor: pointer;
+	margin: 0;
+}
+button:active {
+	margin: 1px 0 0 1px;
+}
+.over {
+	border: 1px dashed #000;
+}
+
+
+
