ajout nb article dans commander articles

--- a/echoppe/css/style.css
+++ b/echoppe/css/style.css
@@ -292,6 +292,30 @@ form .input_valider {
     font-weight:bold;
     color: blue;
 }
+
+
+/* ====== */
+/* Liste à plusieurs colonnes*/
+
+#list_columns ul{
+  width:760px;
+  margin-bottom:200px;
+  margin-top: 75px;
+  margin-left: 0px;
+  overflow:hidden;
+}
+#list_columns li {
+  line-height:1.5em;
+  border-bottom:1px solid #ccc;  
+  float: left;
+  display:inline;
+}
+#double li  { width:50%; } 
+#triple li  { width:33.333%; } 
+#quad li    { width:25%; } 
+#six li     { width:16.666%; } 
+
+
 /* ========================================================================== */
 /* Autre */
 
